--- a/docs/设计模式六大原则/依赖倒置原则.md
+++ b/docs/设计模式六大原则/依赖倒置原则.md
@@ -21,3 +21,21 @@
 在实现依赖倒转原则时，我们需要针对抽象层编程，而将具体类的对象通过 **依赖注入** 的方式注入到其他对象中。
 
 依赖注入是指当一个对象要与其他对象发生依赖关系时，通过抽象来注入所依赖的对象。
+
+
+
+最简单的例子就是
+
+假设有个人类，有个获取信息的功能。
+
+以前大家都用短信来发信息,然后后来有了微信，如图
+
+![image-20221107115842210](依赖倒置原则/image-20221107115842210.png)
+
+后来，又多了n种方法。。。
+
+人这个类是不是要写一堆接收方法。。。
+
+但是如果我们抽象一层，将发信息抽象起来，然后人只需要写一个接收方法，参数是接口就可以。可以非常节约代码量。
+
+![image-20221107120125426](依赖倒置原则/image-20221107120125426.png)
