--- a/docs/设计模式六大原则/设计模式原则总结.md
+++ b/docs/设计模式六大原则/设计模式原则总结.md
@@ -21,3 +21,9 @@
 **开闭原则**
 
 开闭原则是说一个软件实体应当对扩展开放，对修改关闭。也就是说软件实体应尽量在不修改原有代码的情况下进行扩展。
+
+原则只是原则，在实际开发中，我们可能会放弃原则尽可能便捷开发。
+
+
+
+此外，设计模式都是这几大原则的具体体现，在代码中好好使用，代码就会变得美观易懂、健壮。
