--- a/docs/设计模式六大原则/单一原则.md
+++ b/docs/设计模式六大原则/单一原则.md
@@ -19,3 +19,33 @@
 ### 意义
 
 单一职责原则是实现高内聚、低耦合的指导方针，它是最简单但又最难运用的原则，需要设计人员发现类的不同职责并将其分离，而发现类的多重职责需要设计人员具有较强的分析设计能力和相关实践经验。
+
+具体案例中我们如何实现单一原则呢？
+
+比如我们创建了一个猫的类
+
+```java
+class cat implements{
+    @Override
+    public void eat(){}
+    @Override
+    public void sleep(){}
+    @Override
+    public void catchmouse(){}
+}
+```
+
+有三个行为，吃饭睡觉抓老鼠。
+
+但是如果我们想要再创建一个狗类，抓老鼠不就不能用了吗。
+
+所以我们将不属于同一职责的接口功能分开来，有利于代码的扩展和可维护性。
+
+以上的案例是从接口的重复运用来讲。并没有提到类的职责越来越多啊。
+
+我们换个角度去想，我们有个类
+
+有三个函数，分别是跟数据库连接相关，跟实体类数据库操作相关，跟图表操作相关。
+
+如果我们建另一个类，也包括了数据库连接，是不是还要复制一份代码，这就显得代码很臃肿，难以实现代码的重用。
+
