--- a/docs/设计模式六大原则/开闭原则.md
+++ b/docs/设计模式六大原则/开闭原则.md
@@ -27,3 +27,6 @@
 在很多面向对象编程语言中都提供了接口、抽象类等机制，可以通过它们定义系统的抽象层，再通过具体类来进行扩展。
 
 如果需要修改系统的行为，无须对抽象层进行任何改动，只需要增加新的具体类来实现新的业务功能即可，实现在不修改已有代码的基础上扩展系统的功能，达到开闭原则的要求。
+
+总之一句话，对扩展开放，对修改关闭，具体实例就是工厂模式
+
