--- a/docs/设计模式六大原则/迪米特原则.md
+++ b/docs/设计模式六大原则/迪米特原则.md
@@ -27,3 +27,5 @@
 在类的划分上，应当尽量创建松耦合的类，类之间的耦合度越低，就越有利于复用，一个处在松耦合中的类一旦被修改，不会对关联的类造成太大波及。
 
 在类的结构设计上，每一个类都应当尽量降低其成员变量和成员函数的访问权限。在类的设计上，只要有可能，一个类型应当设计成不变类。在对其他类的引用上，一个对象对其他对象的引用应当降到最低。
+
+**这个法则主要是要求我们一个类最少的去接触依赖另一个类，这就并不是一个能够完全杜绝的情况，我们只能尽量的不要让陌生的类作为局部变量出现在类的内部，并且保障类对自己依赖的类知道的越少越好。**
