--- a/docs/创建型模式/建造者模式.md
+++ b/docs/创建型模式/建造者模式.md
@@ -290,3 +290,19 @@ public class Main {
 当然缺点也是很明显，**比较冗长**。。。。。
 
 当然，Lombok说,"没关系，我会出手"!
+
+
+
+### 问题发现
+
+2022-11-10日
+
+为什么java的set方法不返回this，这样就不要builder呀?
+
+> 对于这个问题，我查阅了很多资料，最后得出结论，**返回什么都随便，按你自己的想法来**
+>
+> **更加推荐使用设计模式中的 Builder 模式 + field / withField 方法，在这些方法里返回 Builder this。**
+>
+> 在javabean规范中，set返回void，get返回变量值
+>
+> 注意：set不返回void可能导致一些框架无法读取相应的方法
