--- a/docs/结构型模式/桥接模式.md
+++ b/docs/结构型模式/桥接模式.md
@@ -187,3 +187,7 @@ public class SmallCoffee extends RefinedCoffee {
 
 
 三层维度也是同理，一层套一层
+
+参考:
+
+[(51条消息) 桥接模式的三维度实例_xiaozou_it的博客-CSDN博客](https://blog.csdn.net/xiaozou_it/article/details/80196202)
